# shinami-python-sdk

./: pyproject.toml
shinami_python_sdk/: shinami_client.py
